fixes to schedule draft