@@ -1,10 +1,14 @@
 package dev.overwave.icebreaker.core.schedule;
 
 import dev.overwave.icebreaker.core.geospatial.Interval;
+import dev.overwave.icebreaker.core.geospatial.Node;
+import dev.overwave.icebreaker.core.geospatial.Point;
 import dev.overwave.icebreaker.core.geospatial.VelocityInterval;
 import dev.overwave.icebreaker.core.geospatial.VelocityIntervalMapper;
 import dev.overwave.icebreaker.core.geospatial.VelocityIntervalRepository;
 import dev.overwave.icebreaker.core.geospatial.VelocityIntervalStatic;
+import dev.overwave.icebreaker.core.graph.Graph;
+import dev.overwave.icebreaker.core.navigation.MovementType;
 import dev.overwave.icebreaker.core.navigation.NavigationPointMapper;
 import dev.overwave.icebreaker.core.navigation.NavigationPointRepository;
 import dev.overwave.icebreaker.core.navigation.NavigationPointStatic;
@@ -19,9 +23,13 @@ import dev.overwave.icebreaker.core.route.DefaultRoute;
 import dev.overwave.icebreaker.core.route.DefaultRouteMapper;
 import dev.overwave.icebreaker.core.route.DefaultRouteRepository;
 import dev.overwave.icebreaker.core.route.DefaultRouteStatic;
+import dev.overwave.icebreaker.core.route.Route;
+import dev.overwave.icebreaker.core.route.Router;
+import dev.overwave.icebreaker.core.serialization.SerializationUtils;
 import dev.overwave.icebreaker.core.ship.ShipMapper;
 import dev.overwave.icebreaker.core.ship.ShipRepository;
 import dev.overwave.icebreaker.core.ship.ShipStatic;
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -30,13 +38,16 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.SequencedCollection;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -44,6 +55,9 @@ import java.util.stream.Stream;
 @Service
 @RequiredArgsConstructor
 public class ScheduleService {
+    public static final Duration DURATION_MAX = Duration.ofDays(10000);
+    private static Graph GRAPH;
+
     private final NavigationRequestRepository navigationRequestRepository;
     private final NavigationRequestMapper navigationRequestMapper;
 
@@ -64,6 +78,15 @@ public class ScheduleService {
 
     private final IcebreakerLocationRepository icebreakerLocationRepository;
     private final MetaRouter metaRouter;
+
+    @PostConstruct
+    void tryReadGraph() {
+        try {
+            GRAPH = SerializationUtils.readWeightedGraph("data/graph.lz4");
+        } catch (Exception e) {
+            log.error("Failed to read graph!", e);
+        }
+    }
 
     public void createSchedule() {
         Instant now = Instant.EPOCH;
@@ -97,10 +120,63 @@ public class ScheduleService {
                         .build())
                 .forEach(ships::add);
 
-        predictFullRoutes(ships, convoyRequests, context);
-        assignIcebreakers(ships, convoyRequests, context);
 
+        while (areMovingShips(ships)) {
+            predictFullRoutes(ships, convoyRequests, context);
+            assignIcebreakers(ships, convoyRequests, context);
+
+            now = updateTime(now, ships, context);
+        }
         System.out.println(convoyRequests);
+    }
+
+    private boolean areMovingShips(List<ScheduledShip> ships) {
+        for (ScheduledShip ship : ships) {
+            if (ship.isIcebreaker() && ship.getStatus() != ScheduleStatus.FREE) {
+                return true;
+            }
+            if (!ship.isIcebreaker() && !Set.of(ScheduleStatus.STUCK, ScheduleStatus.ARRIVED).contains(ship.getStatus())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private Instant updateTime(Instant now, List<ScheduledShip> ships, MetaRouteContext context) {
+        ships.sort(Comparator.comparing(ScheduledShip::getActionEndEta));
+        Instant nextTick = ships.getFirst().getActionEndEta();
+        for (ScheduledShip ship : ships) {
+            if (nextTick.isBefore(ship.getActionEndEta())) {
+                break;
+            }
+            processTick(ship, now, context);
+        }
+        return nextTick;
+    }
+
+    private void processTick(ScheduledShip ship, Instant now, MetaRouteContext context) {
+        switch (ship.getStatus()) {
+            case FREE -> {
+                NavigationPointStatic from = context.points().get(ship.getCurrentNavigationPointId());
+                NavigationPointStatic to = context.points().get(ship.getNextNavigationPointId());
+                Map<Point, Node> nodes = Router.findClosestNodes(GRAPH, from.point(), to.point());
+                Duration referenceDuration = Duration.between(now, ship.getActionEndEta()).multipliedBy(2);
+                Optional<Route> route = Router.createRoute(nodes.get(from.point()), nodes.get(to.point()), now,
+                        context.ships().get(ship.getShipId()), MovementType.INDEPENDENT, referenceDuration);
+
+                if (route.isPresent()) {
+                    ship.setStatus(ScheduleStatus.MOVING)
+                            .setActionEndEta(route.get().interval().end());
+                } else {
+                    // не смогли построить маршрут???
+                    ship.setStatus(ScheduleStatus.WAITING)
+                            .setActionEndEta(now.plus(1, ChronoUnit.DAYS));
+                }
+            }
+            default -> {
+                System.out.println(ship);
+            }
+        }
     }
 
     private void assignIcebreakers(List<ScheduledShip> ships, List<ConvoyRequest> convoyRequests,
@@ -110,34 +186,69 @@ public class ScheduleService {
                 .values().stream()
                 .sorted(Comparator.comparing(cr -> cr.getRouteSegment().interval().start()))
                 .toList();
-        List<ScheduledShip> icebreakers = ships.stream().filter(ScheduledShip::isIcebreaker).toList();
+        List<ScheduledShip> icebreakers =
+                ships.stream().filter(ScheduledShip::isIcebreaker).collect(Collectors.toList());
 
         for (ConvoyRequest convoyRequest : closestConvoyRequests) {
+            if (icebreakers.isEmpty()) {
+                break;
+            }
             NavigationPointStatic target = convoyRequest.getRouteSegment().from();
 
+            Instant fastestArrival = Instant.MAX;
+            ScheduledShip fastestIcebreaker = null;
             for (ScheduledShip icebreaker : icebreakers) {
+                long finishPointId = icebreaker.getFinishNavigationPointId() == null ?
+                        icebreaker.getCurrentNavigationPointId() : icebreaker.getFinishNavigationPointId();
                 ScheduledShip virtualIcebreaker = ScheduledShip.builder()
                         .shipId(icebreaker.getShipId())
                         .currentNavigationPointId(icebreaker.getNextNavigationPointId())
                         .status(ScheduleStatus.FREE)
                         .icebreaker(true)
-                        .finishNavigationPointId(icebreaker.getFinishNavigationPointId())
+                        .finishNavigationPointId(finishPointId)
                         .actionEndEta(icebreaker.getActionEndEta())
                         .build();
                 Duration etaToFinish = estimateEtaToFinish(context, virtualIcebreaker);
+                if (etaToFinish == null) {
+                    continue;
+                }
                 virtualIcebreaker
-                        .setCurrentNavigationPointId(icebreaker.getFinishNavigationPointId())
+                        .setCurrentNavigationPointId(finishPointId)
                         .setFinishNavigationPointId(target.id())
                         .setActionEndEta(icebreaker.getActionEndEta().plus(etaToFinish));
                 Duration etaToFinishSecond = estimateEtaToFinish(context, virtualIcebreaker);
-                log.info("IBR {} ETA is {}", context.ships().get(icebreaker.getShipId()).name(),
-                        asLDT(icebreaker.getActionEndEta().plus(etaToFinish).plus(etaToFinishSecond)));
+                if (etaToFinishSecond == null) {
+                    continue;
+                }
+                Instant etaInstant = icebreaker.getActionEndEta().plus(etaToFinish).plus(etaToFinishSecond);
+                if (fastestArrival.isAfter(etaInstant)) {
+                    fastestArrival = etaInstant;
+                    fastestIcebreaker = icebreaker;
+                }
             }
+            if (fastestIcebreaker == null) {
+                log.info("No icebreakers available, skipped");
+                continue;
+            }
+            icebreakers.remove(fastestIcebreaker);
+            if (fastestIcebreaker.getStatus() != ScheduleStatus.FREE) {
+                log.info("Fastest icebreaker is busy, not assigned");
+                continue;
+            }
+            fastestIcebreaker.setFinishNavigationPointId(convoyRequest.getRouteSegment().to().id());
+            List<RoutePredictionSegment> route = predictRoute(fastestIcebreaker, context);
+            convoyRequest.setIcebreaker(fastestIcebreaker);
+            fastestIcebreaker.getConvoyRequests().add(convoyRequest);
+            log.info("Icebreaker {} assigned to request {}", context.ships().get(fastestIcebreaker.getShipId()),
+                    convoyRequest);
         }
     }
 
     private Duration estimateEtaToFinish(MetaRouteContext context, ScheduledShip virtualIcebreaker) {
         List<RoutePredictionSegment> route = predictRoute(virtualIcebreaker, context);
+        if (route == null) {
+            return null;
+        }
         return route.stream().map(r -> r.interval().duration()).reduce(Duration::plus).orElse(Duration.ZERO);
     }
 
@@ -182,14 +293,15 @@ public class ScheduleService {
             log.info("_____________________________________________________");
             log.info("Predicting route for " + context.ships().get(freeShip.getShipId()).name());
             List<RoutePredictionSegment> prediction = predictRoute(freeShip, context);
-            for (RoutePredictionSegment segment : prediction) {
-                log.info("From {} to {}, [{} -> {}]", segment.from().name(), segment.to().name(),
-                        asLDT(segment.interval().start()), asLDT(segment.interval().end()));
-            }
-            if (prediction.isEmpty()) {
+            if (prediction == null) {
+                log.info("Ship {} is stuck", context.ships().get(freeShip.getShipId()).name());
                 freeShip.setStatus(ScheduleStatus.STUCK);
                 freeShip.setActionEndEta(Instant.MAX);
                 continue;
+            }
+            for (RoutePredictionSegment segment : prediction) {
+                log.info("From {} to {}, [{} -> {}]", segment.from().name(), segment.to().name(),
+                        asLDT(segment.interval().start()), asLDT(segment.interval().end()));
             }
             RoutePredictionSegment firstPoint = prediction.getFirst();
             freeShip.setStatus(firstPoint.convoy() ? ScheduleStatus.WAITING_CONVOY : ScheduleStatus.WAITING);
@@ -198,7 +310,9 @@ public class ScheduleService {
 
             for (RoutePredictionSegment route : prediction) {
                 if (route.convoy()) {
-                    convoyRequests.add(new ConvoyRequest(freeShip, null, route));
+                    ConvoyRequest convoyRequest = new ConvoyRequest(freeShip, null, route);
+                    freeShip.getConvoyRequests().add(convoyRequest);
+                    convoyRequests.add(convoyRequest);
                 }
             }
         }
@@ -216,20 +330,24 @@ public class ScheduleService {
         NavigationPointStatic from = context.points().get(scheduledShip.getCurrentNavigationPointId());
         NavigationPointStatic to = context.points().get(scheduledShip.getFinishNavigationPointId());
         Instant startAt = scheduledShip.getActionEndEta();
-        List<RoutePredictionSegment> route = List.of();
-        while (route.isEmpty()) {
+        List<RoutePredictionSegment> route;
+        while (true) {
             route = metaRouter.createRoute(from, to, ship, startAt, context);
-            if (!route.isEmpty()) {
-                log.info("Route found!");
+            if (route != null && route.isEmpty()) {
+                // already there
+                return List.of();
+            }
+            if (route != null) {
+//                log.info("Route found!");
                 break;
             }
             Interval interval = getInterval(startAt, context.velocities().values());
             Instant afterWaiting = interval.end();
             if (afterWaiting.equals(startAt)) {
-                log.info("Exceeded time range!");
-                return List.of();
+//                log.info("Exceeded time range!");
+                return null;
             }
-            log.info("Skipping to next interval...");
+//            log.info("Skipping to next interval...");
             startAt = afterWaiting;
 
         }
